--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,5 +8,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: make install
-      - uses: make lint
+      - run: make install
+      - run: make lint
