Добавлена игра Brain Even и asciinema для неё

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My Hexlet first project",
   "type": "module",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "repository": {
     "type": "git",
